--- a/main.css
+++ b/main.css
@@ -1,14 +1,25 @@
-#HeadLine {
-    border: 3px dashed black;
-    background-color: aqua;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    width: 300px;
+#headLine{
+    background-color: grey;
 }
-#ReMark{
-    color: cornflowerblue;
+.frame{
+    border: 1px solid grey;
+    width: 100%;
 }
-#main{
-    width: 300px;
-    height: 300px;
-    border: 0.3cm inset #00FFFF;
+.main {
+    background-color: deepskyblue;
+    width: 80%;
+    height: 200px;
+}
+.sideView{
+    background-color: greenyellow;
+    text-align: center;
+    width: 20%;
+    height: 200px;
+}
+#chat{
+    background-color: lightpink;
+}
+.loginForm{
+    height: 20%;
+    background-color: teal;
 }
