--- a/main.css
+++ b/main.css
@@ -2,12 +2,11 @@
     font-size: 50px;
 }
 body {
-    background-color: white;
-    margin: 0;
+    background-color: #C8C8FF;
 }
 
 #headLine {
-    background-color: darkgoldenrod;
+    background-color: #C8C8FF;
 }
 
 .frame {
@@ -18,17 +17,16 @@ body {
 }
 
 .main {
-    background-color: #0ca6d4;
+    background-color: white;
     width: 80%;
     height: 500px;
 }
 
 .sideView {
-    background-color: #8f784b;
+    background-color: #6464FF;
     text-align: center;
     width: 20%;
     height: 500px;
-    border-top:darkgoldenrod
 }
 
 tbody {
@@ -43,8 +41,7 @@ tbody {
     border: 1px solid;
     size: 100px;
     font-family: fantasy;
-    width : 80%;
-    background: white;
+    width : 80%;  
 }
 
 .noresize {
@@ -56,6 +53,6 @@ tbody {
 }
 
 .img {
-    width: 50px;
-    height: 50px;
+    width: 30px;
+    height: 30px;
 }
