--- a/main.css
+++ b/main.css
@@ -84,5 +84,8 @@ textarea{
 button{
   border: 0;
   outline: 0;
-  background: dimgray;
+  background: gray;
+  border: solid 2px black;
+  border-radius: 4px;
+  padding:3px;
 }
