--- a/main.css
+++ b/main.css
@@ -89,3 +89,11 @@ button{
   border-radius: 4px;
   padding:3px;
 }
+.del_button{
+    float: right;
+}
+#change{
+    float: right;
+    width: 100px;
+    height: 50px;
+}
