--- a/main.css
+++ b/main.css
@@ -106,6 +106,9 @@ button {
     float: right;
     width: 100px;
     height: 50px;
+    border: solid 0px;
+    border-radius: 30px;
+    background-color: #ebebeb;
 }
 
 .table_color {
