--- a/main.css
+++ b/main.css
@@ -40,7 +40,7 @@ tbody {
 
 .main_todo {
     size: 100px;
-    font-family: fantasy;
+    font-family: sans-serif;
     width: 80%;
     background: #C6B1A4;
     border: 1px solid black;
